examples/test/testpolicy1131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1131
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key27: value28
      key33: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value9
          key38: value32
          key19: value4
      podSelector:
        matchLabels:
          key5: value22
          key9: value6
